--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <h2 class="font-bold text-4xl text-purple-600 text-center">Please Login</h2>
                 <div class="mt-4 w-2/3 mx-auto flex flex-col items-center">
                     <input type="email" name="" placeholder="Enter Your Email" class="w-3/4 rounded-3xl  text-black block py-3 px-4 " id="email">
+                    <p class="text-gray-200">Email: me@baperbank.com</p>
                     <input type="password" name="" placeholder="Enter Your Email" class="w-3/4 rounded-3xl  text-black block py-3 px-4 my-4 " id="password">
+                    <p class="text-gray-200">Password: 1234</p>
                     <button class="w-3/4 rounded-3xl bg-purple-600 py-2 px-4 text-white block hover:bg-purple-500 duration-200" id="login">Submit</button>
                     <span class="text-center text-red-500" id="login-error"></span>
                 </div>
